[tool.poetry]
name = "gossip coffee"
version = "0.1.0"
description = "Projeto de um chat para conversas/atualizações"
authors = ["Balbina Raquel Correia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
